--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1E1E1E;
+    background-color: #212121;
 }
 
 .hero-section {
@@ -9,93 +9,57 @@ body {
 footer {
     text-align: center;
     color: #FFFFFF;
-    font-family: 'Roboto';
+    font-family: "Commissioner", serif;
 }
  
 span {
-    color: #05AC77;
+    background-color: #233D66;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-left: 12px;
+    padding-right: 12px;
+    text-align: center;
+    color: #FFFFFF;
 }
 
 .main-title {
+    width: 100%;
     font-size: 100px;
-    font-family: 'Roboto';
-    font-style: bold;
+    font-family: "Commissioner", serif;
+    font-weight: 900;    
+    font-style: normal;
+    text-align: center;
     color: #FFFFFF;
+    line-height: 1;
 }
 
 .description {
-    width: 50%;
-    margin-top: 0;
+    width: 100%;
     color: #FFFFFF;
+    text-align: center;
+    font-size: 34px;
+    font-family: "Commissioner", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.description-goal {
+    width: 100%;
+    color: #FFFFFF;
+    text-align: center;
     opacity: 80%;
     font-size: 24px;
-    font-family: 'Roboto';
-    font-weight: 500;
-}
-
-.features-container {
-    padding-top: 30px;
-    align-items: stretch;
-    justify-content: space-evenly;;
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    gap: 16px;
-    transition: all 2s;
-}
-
-.feature1 {
-    padding: 30px;
-    margin-top: 60;
-    flex-grow: 1;
-    flex: 1 1 0px;
-    background-color: #05AC77;
-    text-align: center;
-    font-size: x-large;
-    font-family: 'Roboto';
-    border-radius: 6px;
-    color: #FFFFFF;
-    margin-bottom: 0;
-    vertical-align: middle;
-}
-
-.feature2 {
-    padding: 30px;
-    flex-grow: 1;
-    flex: 1 1 0px;
-    margin-top: 60;
-    color: #FFFFFF;
-    border-width: 2px;
-    background-color: #05AC77;
-    text-align: center;
-    font-family: 'Roboto';
-    border-radius: 6px;
-    font-size: x-large;
-    vertical-align: middle;
-}
-
-.feature3 {
-    padding: 30px;
-    flex-grow: 1;
-    flex: 1 1 0px;
-    margin-top: 60;
-    color: #FFFFFF;
-    background-color: #05AC77;
-    vertical-align: middle;
-    font-family: 'Roboto';
-    font-size: x-large;
-    border-radius: 6px;
-    text-align: center;
+    font-family: "Commissioner", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .screenshots-container {
-    margin-top: 150;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 16px;
 }
 
 .dashboard {
@@ -103,32 +67,41 @@ span {
 }
 
 .dashboard-light {
-    width: 300px;
-    height: 600px;
-
+    width: 400px;
+    height: 800px;
+    border-radius: 18px;
 }
 
 .dashboard-dark {
-    width: 300px;
-    height: 600px;
+    width: 400px;
+    height: 80000px;
+    border-radius: 18px;
 }
 
 .laws {
-    width: 300px;
-    height: 600px;
+    width: 400px;
+    height: 800px;
+    border-radius: 18px;
 }
 
 .law {
-    width: 300px;
-    height: 600px;
+    width: 400px;
+    height: 800px;
+    border-radius: 18px;
+}
+
+.drawer {
+    width: 400px;
+    height: 800px;
+    border-radius: 18px;
 }
 
 .downloads {
-    font-size: 100px;
-    margin-top: 0px;
-    font-family: 'Roboto';
+    font-size: 60px;
+    font-family: "Commissioner", serif;
     font-style: bold;
     text-align: center;
+    font-style: normal;
     color: #FFFFFF;
 }
 
@@ -137,29 +110,29 @@ span {
     margin-top: 120;
 }
 
+.button {
+    border-radius: 12px;
+    background-color: #4586ef;
+    border: none;
+    color: white;
+    text-align: center;
+    width: 50%;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 26px;
+    margin: 4px 2px;
+    padding: 30px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .button:hover {
+    background-color: #2876f4;
+  } 
 
 .police {
     font-size: 30px;
     margin-top: 0;
-}
-
-
-.main-feature-container {
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 16px;
-}
-
-.main-feature-description {
-    font-size: 20px;
-    margin-top: 150px;
-    font-family: 'Roboto';
-    font-style: bold;
-    text-align: center;
-    color: #FFFFFF;
 }
 
 .playstore-section {
@@ -168,14 +141,4 @@ span {
     justify-content: center;
     flex-wrap: wrap;
     gap: 16px;
-}
-
-.playstore-section-title {
-    width: 100%;
-    font-size: 50px;
-    font-family: 'Roboto';
-    font-style: bold;
-    text-align: center;
-    color: #FFFFFF;
-    margin-bottom: 0;
 }
