--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ span {
 
 .screenshots-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 16px;
