--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,15 @@ span {
     color: #FFFFFF;
 }
 
+.privacy-policy {
+    color: #FFFFFF;
+    width: 100%;
+    font-style: normal;
+    text-align: center;
+    font-family: "Commissioner", serif;
+    cursor: pointer;
+}
+
 .main-title {
     width: 100%;
     font-size: 100px;
